# simple_web_server_c

./: CMakeLists.txt  CMakeLists.txt~  main.c  main.c~
config/: http_request_config.h  logger_config.h  socket_config.h  socket_config.h~
modules/http/: http_parcer.c  http_parser.h
modules/logger/: logger.c  logger.h
modules/route/: route.c  route.c~  route.h
modules/socket/: socket.c  socket.c~  socket.h  socket.h~
web_pages/index/: index.html  index.html~  script.js  style.css  style.css~
web_pages/some_page/: some_page.html
